--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
       <groupId>org.apache.flink</groupId>
       <artifactId>flink-streaming-java_2.12</artifactId>
       <version>1.14.3</version>
-      <scope>provided</scope>
+      <!-- <scope>provided</scope> -->
     </dependency>
     <!-- https://mvnrepository.com/artifact/org.apache.flink/flink-connector-kafka -->
     <dependency>
@@ -45,13 +45,13 @@
       <version>1.14.3</version>
       <scope>provided</scope>
     </dependency>
-    <!-- https://mvnrepository.com/artifact/org.apache.flink/flink-connector-elasticsearch-base -->
+    <!-- https://mvnrepository.com/artifact/org.apache.flink/flink-connector-elasticsearch7 -->
     <dependency>
       <groupId>org.apache.flink</groupId>
-      <artifactId>flink-connector-elasticsearch-base_2.12</artifactId>
+      <artifactId>flink-connector-elasticsearch7_2.12</artifactId>
       <version>1.14.3</version>
-      <scope>test</scope>
     </dependency>
+
     <!-- https://mvnrepository.com/artifact/org.apache.flink/flink-statebackend-rocksdb -->
     <dependency>
       <groupId>org.apache.flink</groupId>
@@ -88,14 +88,18 @@
       <version>1.14.3</version>
     </dependency>
 
-
-
-
     <!-- https://mvnrepository.com/artifact/org.apache.bahir/flink-connector-redis -->
     <dependency>
       <groupId>org.apache.bahir</groupId>
       <artifactId>flink-connector-redis_2.11</artifactId>
       <version>1.0</version>
+      <exclusions>
+        <!-- 解决flink-streaming-java_2.12和flink-streaming-java_2.11冲突问题 -->
+        <exclusion>
+          <groupId>org.apache.flink</groupId>
+          <artifactId>flink-streaming-java_2.11</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
     <dependency>
