--- a/pom.xml
+++ b/pom.xml
@@ -57,21 +57,49 @@
       <groupId>org.apache.flink</groupId>
       <artifactId>flink-statebackend-rocksdb_2.12</artifactId>
       <version>1.14.3</version>
-      <scope>test</scope>
     </dependency>
     <!-- https://mvnrepository.com/artifact/org.apache.flink/flink-table-planner -->
     <dependency>
       <groupId>org.apache.flink</groupId>
       <artifactId>flink-table-planner_2.12</artifactId>
       <version>1.14.3</version>
-      <scope>provided</scope>
+      <!-- <scope>provided</scope> --> <!-- 避免ClassNotFoundException: org.apache.flink.table.api.bridge.java.StreamTableEnvironment -->
     </dependency>
     <!-- https://mvnrepository.com/artifact/org.apache.flink/flink-table-planner-blink -->
+    <!-- <dependency> -->
+    <!--   <groupId>org.apache.flink</groupId> -->
+    <!--   <artifactId>flink-table-planner-blink_2.12</artifactId> -->
+    <!--   <version>1.13.5</version> -->
+    <!--   &lt;!&ndash; <scope>test</scope> &ndash;&gt; -->
+    <!--   <exclusions> -->
+    <!--     <exclusion> -->
+    <!--       <groupId>org.apache.flink</groupId> -->
+    <!--       <artifactId>flink-table-api-java-bridge_2.12</artifactId> -->
+    <!--     </exclusion> -->
+    <!--     <exclusion> -->
+    <!--       <groupId>org.apache.flink</groupId> -->
+    <!--       <artifactId>flink-table-api-scala-bridge_2.12</artifactId> -->
+    <!--     </exclusion> -->
+    <!--     <exclusion> -->
+    <!--       <groupId>org.apache.flink</groupId> -->
+    <!--       <artifactId>flink-table-common</artifactId> -->
+    <!--     </exclusion> -->
+    <!--     <exclusion> -->
+    <!--       <groupId>org.apache.flink</groupId> -->
+    <!--       <artifactId>flink-table-api-java</artifactId> -->
+    <!--     </exclusion> -->
+    <!--     <exclusion> -->
+    <!--       <groupId>org.apache.flink</groupId> -->
+    <!--       <artifactId>flink-table-api-scala_2.12</artifactId> -->
+    <!--     </exclusion> -->
+    <!--   </exclusions> -->
+    <!-- </dependency> -->
+    <!-- https://mvnrepository.com/artifact/org.apache.flink/flink-table-api-java-bridge -->
     <dependency>
       <groupId>org.apache.flink</groupId>
-      <artifactId>flink-table-planner-blink_2.12</artifactId>
-      <version>1.13.5</version>
-      <scope>test</scope>
+      <artifactId>flink-table-api-java-bridge_2.12</artifactId>
+      <version>1.14.3</version>
+      <!-- <scope>provided</scope> --> <!-- 避免ClassNotFoundException: org.apache.flink.table.api.bridge.java.StreamTableEnvironment -->
     </dependency>
     <!-- https://mvnrepository.com/artifact/org.apache.flink/flink-csv -->
     <dependency>
@@ -87,6 +115,15 @@
       <artifactId>flink-clients_2.12</artifactId>
       <version>1.14.3</version>
     </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.apache.flink/flink-cep -->
+    <dependency>
+      <groupId>org.apache.flink</groupId>
+      <artifactId>flink-cep_2.12</artifactId>
+      <version>1.14.3</version>
+      <scope>provided</scope>
+    </dependency>
+
 
     <!-- https://mvnrepository.com/artifact/org.apache.bahir/flink-connector-redis -->
     <dependency>
@@ -114,6 +151,8 @@
       <version>4.11</version>
       <!-- <scope>test</scope> -->
     </dependency>
+
+
   </dependencies>
 
 </project>
